[gd_scene load_steps=6 format=3 uid="uid://b5bx7cdb6upyj"]

[ext_resource type="Texture2D" uid="uid://dsvhry7jkxrlh" path="res://Asset/Buttons/Asset96.png" id="1_ceyar"]
[ext_resource type="FontFile" uid="uid://b8v3wi1cuh2pa" path="res://Asset/font/MilkyNice.ttf" id="2_abxgk"]
[ext_resource type="Script" path="res://Script/ListOrderElement.gd" id="2_usr0p"]
[ext_resource type="Texture2D" uid="uid://cx4c25dhkkeor" path="res://Asset/Buttons/IconArrowUp.png" id="3_gvtd4"]
[ext_resource type="Texture2D" uid="uid://c2xckodfy2wfo" path="res://Asset/Buttons/IconArrowDown.png" id="4_mops4"]

[node name="ListOrderElement" type="TextureRect"]
custom_minimum_size = Vector2i(575, 100)
offset_right = 575.0
offset_bottom = 100.0
texture = ExtResource("1_ceyar")
ignore_texture_size = true
script = ExtResource("2_usr0p")

[node name="labelRole" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -34.5
offset_right = 204.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_abxgk")
theme_override_font_sizes/font_size = 55
text = "1. Role"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnOrderUp" type="TextureButton" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -35.0
offset_right = -26.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("3_gvtd4")
ignore_texture_size = true
stretch_mode = 0

[node name="btnOrderDown" type="TextureButton" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = -35.0
offset_right = 87.0
offset_bottom = 35.0
grow_vertical = 2
texture_normal = ExtResource("4_mops4")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="btnOrderUp" to="." method="_on_btn_order_up_pressed"]
[connection signal="pressed" from="btnOrderDown" to="." method="_on_btn_order_down_pressed"]
